--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,94 +1,186 @@
-body{ 
-    margin: 0;
-    background-color:antiquewhite;
+body{
+    font-family: 'Montaga', serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
- /*Btn main container index */
-.btn-primary{
-    background-color: #0d6efd;
-    border-color: #0d6efd;
-    color: #fff;
-    margin: 8px 0px;
-    padding: 6px 12px;
-    border: 1px solid transparent;
-    border-radius: 1.25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+h1,h2,h3,h4,h5{
+    font-weight: 700;
+    color:#66FCF1;
+}
+
+h3{
+    font-size:1.5rem;
+}
+a, .nav-link{
+    color:#66FCF1;
     text-decoration: none;
-
 }
 
-.btn-secondary {
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d;
-    margin: 8px 0px;
-    padding: 6px 12px;
-    border: 1px solid transparent;
-    border-radius: 1.25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+img{
+    filter: grayscale(50%) brightness(0.8);
+}
+
+img.rounded-circle{
+    filter:none;
+    border: 2px solid #66FCF1;
+}
+input{
+    background-color: #1F2833 !important;
+    color:#66FCF1 !important;
+}
+/* HEADER */
+.navbar{
+    background-color:#0B0C10;
+    color:#66FCF1;
+}
+.navbar-logo, .footer_logo{
+    font-weight: 700;
+    font-size:1.5rem;
     text-decoration: none;
-
-    
 }
 
-
-
-.card-deck{
-    margin:0 auto;
-    max-width: 1000px;
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
-    gap:20px;
-    font-family: sans-serif;
-    font-size: 16px;
+.btn-main{
+    background-color:#66FCF1 !important;
+    color:#0B0C10 !important;
 }
 
-.card{
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+/*Post Section*/
+
+.hero-01{
+    background-color:#1F2833;
 }
 
-.card-img{
-    width: 100%;
+.main-post{
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.main-post-badges{
+    position:absolute;
+    top:10px;
+    right:10px;
+    font-size:0.8rem;
+}
+
+.main-post-badges>a{
+    background-color:#0B0C10;
+    color:#66FCF1;
     display: block;
 }
 
-.card-body{
-    background: #f3ebeb;
-
+.main-post-content{
+    position: absolute;
+    bottom: 10px;
+    color:#66FCF1;
 }
 
-.card-info{
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.8em;
+/*Blog post Section*/
+
+.blog-post{
+    background-color:#0B0C10;
+    color:#C5C6C7;
 }
 
-.card-info > p:first-of-type{
-    margin-top: 0;
+.post-blog{
+    background-color:#1F2833;
 }
 
-.card-info > p:last-of-type{
-    margin-bottom: 0;
+.post-blog h3{
+    font-size:1.4rem;
 }
 
-.edit_ops{
+.blog-post img{
+    width: 100%;
+    height: 100%;
+    object-fit:fill;
+}
+.post-blog p{
+    font-size: 0.9rem;
+}
+
+.badge > a{
+    margin-left: 0.5rem;
+    padding: 0.5rem;
+    background-color:#535768;
+    color:#66FCF1;
     text-decoration: none;
+
 }
 
-.edit_ops.hover{
-    text-decoration: underline;
+.badge{
+    margin-top:  1rem;
+    margin-bottom: 1rem;
 }
 
-.card-text{
-    line-height: 1.5;
-    font-size: 13px;
-    padding: 0px;
-    font-family: sans-serif;
+
+/*Social Links*/
+
+.social-link { /*preciso arrumar espaco entre social media&*/
+    font-size: 1.5rem;
+    background-color:#d9e6e5;
+    color:#0B0C10;
+    
+
 }
 
-.card-title {
-    margin-top: 1.5em;
-    text-decoration: none;
+.primary-color {
+    background-color:#536070;
+}
+.secondary-color{
+    background-color:#142f50;
+    color:#66FCF1;
+}
+.third-color{
+    background-color:#1F2833;
+}
+
+.aside-heading{
+    border-left:3px solid #66FCF1;
+    padding-left: 10px;
+}
+
+.author>p {
+    text-align: justify;
+    font-size: 0.8rem;
+}
+
+.author .social-links a{
+    margin-left: 0.8rem;
+}
+
+.badges>a {
+    margin-left: 0.5rem;
+    padding: 0.5rem;
+    display: inline-block;
+    margin:0.2rem;
+    padding: 0.5rem;
+    background-color:#535768;
+    color:#66FCF1;
+
+}
+
+.badges {
+    margin-top:  1rem;
+    padding-bottom: 1rem;
+}
+
+
+/*Footer*/
+
+footer{
+    background-color:#1F2833;
+    color:#C5C6C7;
+}
+
+.footer input{
+    background-color:#0B0C10 !important;
+}
+
+.useful_links {
+    color:#66FCF1;
+    
+}
+
+.footer p {
+    font-size:0.9rem;
 }
