--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -11,13 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Montaga&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <title>Hello, World!| Blog</title>
 
     </script>
 
@@ -27,23 +24,17 @@
 
   </head>
   <body>
-    <!--Nav Bar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">Hello World Blog!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-logo" href="{% url 'index' %}">Hello, World!| Blog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
-            </li>
-           
-            
-            <!---Category Menu Code-->
-            {% if caty_menu %}
-            
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <!---Account setting-->
+             {% if caty_menu %}
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   {{ user.first_name }} {{ user.last_name }}
@@ -55,43 +46,42 @@
                     <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
                     
                   {%else %}
-                      <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
+                  <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
                   {% endif %}
                 </ul>
-              </li>
-            
-            {% endif %}
-            {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'post' %}">Post your message</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
-              </li>
-            </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-              </li>
-            {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">Register Now</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Sign in</a>
-              </li>
-            {% endif %}
-            
-            
-          </ul>
-        </div>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'post' %}">Post your message</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'register' %}">Register Now</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">Sign in</a>
+                </li>
+              {% endif %}
+  
+            </ul>
+             {% endif %}
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control me-2 rounded-0" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn-main btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
       </div>
-    </nav>  
-   <br/>
-    <div class="container">
+    </nav>
+  </body>
         {% block content %}
 
         {% endblock %}
-    </div>
+  
 
-</body>
+
 </html>
