--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -4,47 +4,155 @@
 
 {% block content %}
 
-<div class="py-5 text-center container">
-    <div class="row py-lg-5">
-         <div class="col-lg-6 col-md-8 mx-auto">
-              <h1 class="fw-light">Share your Adventure Moments!</h1>
-              <p class="lead text-muted">With Hello World Blog! you can share your moments worldwide...</p>
-             <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="{% url 'create_category' %}" class="btn-primary" >Create New Category</a>
-                <a href="{% url 'post' %}" class="btn-secondary">Post your message</a>
-            </div>
-         </div>
-    </div>
-</div>
-
-<!--Card Post Layout-->
-
-<div class="card-deck">
-  {% for post in object_list %}
-      <div class="card">
-        <img src="{% static 'img/01img.jpg'%}" class="card-img" alt="...">
-          <div class="card-body">
-              <h3 class="title-post"><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a><h3>
-                <br>
-               <p class="card-text">{{ post.article_snippet }}</p>
-               <p class="card-text"><small class="text-muted">{{ post.publish_date }}</small></p>
-          </div>
-            <div class="card-info">
-                {% if user.is_authenticated %}
-                  <div>
-
-                    {% if user.id == post.author.id %}
-                      <small><a href="{% url 'update_post' post.pk %}" class="edit_opts">Edit</a></small>
-
-                      <small><a href="{% url 'post_delete' post.pk %}" class="edit_ops">Delete</a></small>
-                    {% endif %}
-                        <a href="{% url 'details-article' post.pk %}" class="card_link">View Article</a>
+<!--Post Section-->
+<div class="hero-01 py-4">
+  <div class="container">
+    {% for post in object_list %}
+    <div class="row">
+      <div class="col-lg-8">
+          <div class="main-post shadow">
+                  <img src="{% static 'img/02.jpg'%}" class="img-fluid" alt="...">
+                  <div class="main-post-badges text-center">
+                      <a class="py-2 px-3 mb-2"><i class="mr-2 fa fa-calendar" aria-hidden="true"></i> {{ post.publish_date }}</a>
+                      <a class="py-2 px-3 mb-2" href="{% url 'details-article' post.pk %}" > {{ post.title }}</a>
                       
                   </div>
-                {% endif %}
+                  <div class="main-post-content">
+                      <div class="row">
+                          <div class="col-md-1">
+                            <img src="{% static 'img/412.jpg'%}" class="img-fluid rounded-circle" alt="Author">
+                          </div>
+                          <div class="col-md-10">
+                              <h2><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a></h2>
+                          </div>
+                      </div>
+                  </div>
+           </div>
 
-            </div>
        </div>
-            {% endfor %} 
+       <div class="col-lg-4">
+        <div class="main-post shadow">
+          <img src="{% static 'img/travel02.jpg'%}" class="img-fluid" alt="...">
+          <div class="main-post-badges text-center">
+            <a class="py-2 px-3 mb-2"><i class="mr-2 fa fa-calendar" aria-hidden="true"></i> {{ post.publish_date }}</a>
+            <a class="py-2 px-3 mb-2" href="{% url 'details-article' post.pk %}" > {{ post.title }}</a>
+           </div>
+          <div class="main-post-content">
+              <div class="row">
+                  <div class="col-sm-3">
+                    <img src="{% static 'img/profilepicture.jpg'%}" class="img-fluid rounded-circle" alt="Author">
+                  </div>
+                  <div class="col-sm-9">
+                      <h3><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a></h3>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+        
 </div>
+
+
+  <!--Blog post Section-->
+<section class="blog-post py-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <article class="post-blog mb-3">
+          <div class="row">
+              <div class="col-sm-3">
+                <img src="{% static 'img/travel02.jpg'%}" class="img-fluid" alt="...">
+            </div>
+         <div class="col-sm-9">
+              <h3 class="m-0 mt-2"><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a></h3>
+              <p class="m-0">{{ post.article_snippet }}</p>
+            <div class="badge">
+              {% if user.is_authenticated %}
+                {% if user.id == post.author.id %}
+                  <a href="{% url 'update_post' post.pk %}" > Edit </a>
+                  <a href="{% url 'post_delete' post.pk %}" >Delete</a>
+                {% endif %}
+                <a href="{% url 'details-article' post.pk %}">View Article</a>
+              {% endif %}
+            </div>
+        </div>
+          </div>
+        </article>
+
+      </div>
+      <aside class="col-md-4 px-4">
+        <h4 class="aside-heading mt-4 mb-3 pl-2">Popular Authors</h4>
+          <article class="row author mb-3">
+              <div class="col-sm-4 py-4">
+                <img src="{% static 'img/profilepicture.jpg'%}" class="img-fluid rounded-circle" alt="Author">
+              </div>
+              <div class="author col-sm-8">
+                <!--Author information & social media-->
+                  <h5 class="m-0">{{ post.author.first_name }}  {{ post.author.last_name}}</h5>
+                    <p class="m-0">{{user_page.bio}}</p>
+                    
+                    <div class="social-links">
+                      
+                      {% if post.author.profile.facebook_url %}
+                        <a href="{{post.author.profile.facebook_url}}"><i class="fa fa-facebook" aria-hidden="true"></i></a> |
+                      {% endif %}
+
+                      {%if post.author.profile.instagram_url %}
+                        <a href="{{post.author.profile.instagram_url}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> | 
+                      {% endif %}
+
+                      {%if post.author.profile.twitter_url %}
+                        <a href="{{post.author.profile.twitter_url}}"><i class="fa fa-twitter" aria-hidden="true"></i></a> |
+                      {% endif %}
+                    </div>
+              </div>
+            </article>
+            <!--Categories-->
+            <h4 class="aside-heading mt-4 mb-3 pl-2">Popular Categories</h4>
+             <div class="badges w-100">
+                <a href="{% url 'details-article' post.pk %}" > {{ post.title }}</a>
+             </div>
+       </aside>
+   </div>
+  </div>
+</section>
+{% endfor %}
+ <!--Footer Section-->
+ <footer class="footer py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+            <a class="footer_logo" href="{% url 'index' %}">Hello, World!| Blog</a>
+             <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in</p>
+        </div>
+        <div class="useful_links col-md-4">
+            <h4>Useful Links</h4>
+            <ul>
+                  <li><a>Home</a></li>
+                  <li><a>Termos of conditions</a></li>
+                  <li><a>Privact Policy</a></li>
+                  <li><a>Contact us</a></li>
+                  <li><a>Newsletter</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+                <h4>Newsletter</h4>
+                <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control me-2 rounded-0" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn-main btn-outline-success" type="submit">Search</button>
+                </form>
+          </div>
+          <div class="w-100 text-center credit">
+            <p>Made by Arthur Neto &copy;2022. All rights reserved</p>
+            </div>
+          </div>
+
+    </div>
+ </footer>
+</body>
+
+</html>
 {% endblock %}
