--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -17,10 +17,7 @@
     <!-- Font-Awesome-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Boostrap-->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>{% block title %}Travel, World!| Blog!{% endblock %}</title>
 
   </head>
@@ -64,7 +61,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               </li>
-            {% else %}
+             {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'register' %}">Register Now</a>
               </li>
@@ -78,61 +75,16 @@
         </div>
       </div>
     </nav>
-    <main class="flex-shrink-0 main-bg base">
-      <div class="container main">
-        <!--column1 -->
-       <div class="col">
-              <div class="post">
-                  <img class="post-img" src="./img/post3.jpeg" alt=""/>
-  
-                  <div class="post-info">
-                      <h2>Blog Post</h2>
-                      <div class="user-info">
-                          <img src="./img/avatar.png" alt="">
-                          <span>User Name</span>
-                          <span>Date 1.2021</span>
-                          <span>Category</span>
-                      </div>
-  
-                      <p>lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                      lorem lorem loremlorem lorem loremlorem lorem lorem
-                  </p>
-                  </div>
-              </div>
-       </div>
-       <!--column2-->
-       <div class="col">
-          <div class="post">
-              <img class="post-img" src="./img/post3.jpeg" alt=""/>
+   
+   {% block content %}
 
-              <div class="post-info">
-                  <h2>Blog Post</h2>
-                  <div class="user-info">
-                      <img src="./img/avatar.png" alt="">
-                      <span>User Name</span>
-                      <span>Date 1.2021</span>
-                      <span>Category</span>
-                  </div>
-
-                  <p>lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem lorem
-
-                  lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem lorem
-              </p>
-              </div>
-          </div>
-       </div>
-
-      </div>
-    </main>
-  {% block content %}
-
-  {% endblock content %}
+   {% endblock content %}
    </main>
+   <!---Footer-->
+   <!--end footer-->
  </body>
+ <!-- Popper -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+</script>
 </html>
 
