--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -1,50 +1,56 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
-<div class="py-5 text-center container">
-    <div class="row py-lg-5">
-         <div class="col-lg-6 col-md-8 mx-auto">
-              <h1 class="fw-light">Share your Adventure Moments!</h1>
-              <p class="lead text-muted">With Hello World Blog! you can share your moments worldwide...</p>
-             <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="{% url 'create_category' %}" class="btn-primary" >Create New Category</a>
-                <a href="{% url 'post' %}" class="btn-secondary">Post your message</a>
+<body>
+  <div class="home-container">
+      <div class="internalcontainerL">
+        lorem lorem 
+        <img src="{% static 'img/travel02.jpg'%}" class="card-img" alt="...">
+      </div>
+      <div class="internalcontainerM">
+        lorem lorem
+        <img src="{% static 'img/04.jpg'%}" class="card-img" alt="...">
+       </div>
+      <div class="internalcontainerR">
+        lorem lorem 
+        <img src="{% static 'img/japan.jpg'%}" class="card-img" alt="...">
+      </div>
+    </div>
+  <!--Card Post Layout-->
+  
+  <div class="card-deck">
+    {% for post in object_list %}
+        <div class="card">
+          <img src="{% static 'img/01img.jpg'%}" class="card-img" alt="...">
+            <div class="card-body">
+                <h3 class="title-post"><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a><h3>
+                  <br>
+                 <p class="card-text">{{ post.article_snippet }}</p>
+                 <p class="card-text"><small class="text-muted">{{ post.publish_date }}</small></p>
+            </div>
+              <div class="card-info">
+                  {% if user.is_authenticated %}
+                    <div>
+  
+                      {% if user.id == post.author.id %}
+                        <small><a href="{% url 'update_post' post.pk %}" class="edit_opts">Edit</a></small>
+  
+                        <small><a href="{% url 'post_delete' post.pk %}" class="edit_ops">Delete</a></small>
+                      {% endif %}
+                          <a href="{% url 'details-article' post.pk %}" class="card_link">View Article</a>
+                        
+                    </div>
+                  {% endif %}
+  
+              </div>
+              <div class="banner-places">
+                <div class="footer-banner">
+                </div>
             </div>
          </div>
-    </div>
-</div>
-
-
-<!--Card Post Layout-->
-
-<div class="card-deck">
-  {% for post in object_list %}
-      <div class="card">
-        <img src="{% static 'img/01img.jpg'%}" class="card-img" alt="...">
-          <div class="card-body">
-              <h3 class="title-post"><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a><h3>
-                <br>
-               <p class="card-text">{{ post.article_snippet }}</p>
-               <p class="card-text"><small class="text-muted">{{ post.publish_date }}</small></p>
-          </div>
-            <div class="card-info">
-                {% if user.is_authenticated %}
-                  <div>
-
-                    {% if user.id == post.author.id %}
-                      <small><a href="{% url 'update_post' post.pk %}" class="edit_opts">Edit</a></small>
-
-                      <small><a href="{% url 'post_delete' post.pk %}" class="edit_ops">Delete</a></small>
-                    {% endif %}
-                        <a href="{% url 'details-article' post.pk %}" class="card_link">View Article</a>
-                      
-                  </div>
-                {% endif %}
-
-            </div>
-       </div>
-    {% endfor %} 
-</div>
-{% endblock %}
-
+      {% endfor %} 
+  </div>
+  {% endblock %}
+  
+  
+</body>
