--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -9,7 +9,7 @@
               <h1 class="fw-light">Share your Adventure Moments!</h1>
               <p class="lead text-muted">With Hello World Blog! you can share your moments worldwide...</p>
              <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="{% url 'create_category' %}" class="btn-primary" >Create New Category</a>
+                <a href="{% url 'create_category' %}" class="btn-primary">Create New Category</a>
                 <a href="{% url 'post' %}" class="btn-secondary">Post your message</a>
             </div>
          </div>
@@ -32,7 +32,7 @@
   {% for post in object_list %}
       
           <h2><a href="{% url 'details-article' post.pk %}" class="blog-post-title">{{ post.title }} </a></h2>
-          
+
   {% endfor %}
         <div class="col-md-1">
           <img class="img-fluid rounded-circle" src="../im" alt="Author" >
@@ -52,7 +52,7 @@
     <div class="position-sticky" style="top: 2rem;">
       <div class="p-4 mb-3 bg-light rounded">
         <h4 class="fst-italic">About</h4>
-        <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+        <p class="mb-0">Customize this section </p>
       </div>
 
       <div class="p-4">
@@ -82,7 +82,3 @@
     <p class="mb-1">COrp 2022</p>
   </div>
 </footer>
-
-
-
-
